--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https: //fonts.googleapis.com/css2? family = Nunito: ital, wght @ 1.300 &família = Roboto: ital, wght @ 0,100; 0,300; 0,500; 0,700; 1,300 & display = swap "
         rel=" stylesheet ">
-    <title>Yoga Interface</title>
+    <title>Yoga-Interface-Mateus</title>
 </head>
 
 <body>
